--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.3"
 pydantic = "^2.9.2"
-sqlmodel = "^0.0.22"
+sqlmodel = "0.0.21"
 beautifulsoup4 = "^4.12.3"
 icecream = "^2.1.3"
 election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true}
 state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true}
-cfscrape = {path = "/Users/johneakin/cloudflare-scrape", develop = true}
+cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}
 nameparser = "^1.1.3"
+pydantic-custom-types = "^0.2.2"
 
 
 [build-system]
