--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles",
 cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}
 nameparser = "^1.1.3"
 pydantic-custom-types = "^0.2.2"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
