--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -16,18 +16,7 @@ jobs:
           deno-version: v1.10.x
       - name: Check out repo
         uses: actions/checkout@v2
-      - name: Fetch data
-        uses: githubocto/flat@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          http_url: https://results.texas-election.com/static/data/election/49664/1009/County.json
-          downloaded_filename: texas-g-2024-results-county.json
-      - name: Fetch data
-        uses: githubocto/flat@v3
-        with:
-          http_url: https://results.texas-election.com/static/data/election/49664/1009/OfficeSummary.json
-          downloaded_filename: texas-g-2024-results-summary.json
-      - name: Fetch data
-        uses: githubocto/flat@v3
-        with:
-          http_url: https://results.texas-election.com/static/data/election/49664/1009/Home.json
-          downloaded_filename: texas-g-2024-results-home.json
+          python-version: 3.x
