--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,15 @@ nameparser = "^1.1.3"
 pydantic-custom-types = "^0.2.2"
 psycopg2 = "^2.9.10"
 
+# Local dependencies for development
+election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true }
+state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true }
+cfscrape = { path = "/Users/johneakin/cloudflare-scrape" }
+
 [tool.poetry.dev-dependencies]
-election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true}
-state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true}
-cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}
+election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true }
+state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true }
+cfscrape = { path = "/Users/johneakin/cloudflare-scrape" }
 
 # Git dependencies for production
 [tool.poetry.dependencies.election_utils]
