--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -31,4 +31,4 @@ jobs:
         run: ls -la
       - name: Run flat
         run: |
-          python main.py 
+          python texas_result_scraper/main.py 
