--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "texasresult-scraper"
+name = "texas-result-scraper"
 version = "0.1.0"
 description = ""
 authors = ["jreakin <johnreakin@gmail.com>"]
