--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Run flat
         run: |
           python texas_result_scraper/main.py  
+          git config --global user.email "dev@abstractdata.io"
+          git config --global user.name "John R. Eakin"
           git add texas_result_scraper/data
           git commit -m "Update data"
           git push
