--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2 = "^2.9.10"
 election_utils = { git = "https://github.com/jreakin/jre-election-utils.git", markers = "sys_platform == 'linux'" }
 state_voterfiles = { git = "https://github.com/Abstract-Data/state-voterfiles.git", markers = "sys_platform == 'linux'" }
 cfscrape = { git = "https://github.com/jreakin/jre-cfscraper.git", markers = "sys_platform == 'linux'" }
+datamodel-code-generator = "^0.26.3"
 
 [tool.poetry.dev-dependencies]
 election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true, markers = "sys_platform == 'darwin'" }
