--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -35,7 +35,7 @@ jobs:
           git lfs install
           git lfs track "*.json"
           git add .gitattributes
-          
+          git commit -m "Add .gitattributes"
 
       - name: Run flat
         continue-on-error: true
